Wed Apr 22 13:52:55 GMT 2015  Olly Betts <olly@tartarus.org>

	* matcher/nearpostlist.cc: Fix "/*" within comment.

Wed Apr 22 12:53:37 GMT 2015  Olly Betts <olly@survex.com>

	* matcher/nearpostlist.cc,matcher/nearpostlist.h: Reimplement OP_NEAR
	  check.  The new implementation consistently requires the terms to
	  occur at different positions, and fixes some false negatives.
	* tests/api_query.cc: Add regression tests as loosenear1.

Mon Apr 20 12:53:04 GMT 2015  Olly Betts <olly@survex.com>

	* matcher/phrasepostlist.cc,matcher/phrasepostlist.h: Reimplement
	  OP_PHRASE check for loose phrases - the existing implementation was
	  buggy, giving both false positives and false negatives in rare
	  cases.  Fixes #653, reported by Jean-Francois Dockes.
	* tests/api_query.cc: Add regression test loosephrase1.

Thu Apr 16 06:51:31 GMT 2015  Olly Betts <olly@survex.com>

	* common/errno_to_string.cc: Fix to build with Sun's C++ compiler.

Thu Apr 16 06:43:40 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Fix XAPIAN_TEST_CXXFLAGS macro to append to the
	  existing value of the variable, not its name.

Wed Apr 15 11:36:40 GMT 2015  Olly Betts <olly@tartarus.org>

	* tests/api_wrdb.cc: Just #ifdef out the problematic part of the
	  adddoc5 testcase for clang.

Wed Apr 15 06:25:13 GMT 2015  Olly Betts <olly@survex.com>

	* common/serialise-double.cc: Fix bug in recent fix.
	* tests/unittest.cc: Extend serialise_double() to provide regression
	  test.

Thu Apr 09 00:40:24 GMT 2015  Olly Betts <olly@survex.com>

	* net/remoteconnection.h: Avoid compiler warning from clang in new
	  getaddrinfo() code.

Wed Apr 08 11:59:00 GMT 2015  Olly Betts <olly@survex.com>

	* common/serialise-double.cc: Add missing cast to unsigned char when
	  we check if the value will fit in the double type.  On machines with
	  IEEE-754 doubles (which is most current platforms), which change
	  makes no difference as we're checking if the value cast to a double